Fixed bug that clipped menu on wide screens.

--- a/src/sass/modules/_m-vet-nav.scss
+++ b/src/sass/modules/_m-vet-nav.scss
@@ -14,14 +14,15 @@ body.va-pos-fixed {
   width: 100%;
   z-index: 6;
 
+  @include media($medium-large-screen) {
+    overflow-y: visible;
+    position: static;
+    width: auto;
+  }
+  
   .va-wip-message {
     padding: 0 1.6rem;
     white-space: normal;
-  }
-
-  @include media($medium-large-screen) {
-    position: static;
-    width: auto;
   }
 }
 
